fix layout break on landscape mobile

--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 /*=== WORDPRESS IMAGE STYLES ===*/
 
-img.alignright {float:right; margin:0 0 1em 1em}
-img.alignleft {float:left; margin:0 1em 1em 0}
-img.aligncenter {display: block; margin-left: auto; margin-right: auto}
-a img.alignright {float:right; margin:0 0 1em 1em}
-a img.alignleft {float:left; margin:0 1em 1em 0}
-a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
+img .alignright {float:right; margin:0 0 1em 1em}
+img .alignleft {float:left; margin:0 1em 1em 0}
+img .aligncenter {display: block; margin-left: auto; margin-right: auto}
+a img .alignright {float:right; margin:0 0 1em 1em}
+a img .alignleft {float:left; margin:0 1em 1em 0}
+a img .aligncenter {display: block; margin-left: auto; margin-right: auto}
 
 /*=== GENERAL LAYOUT STYLES ===*/
 
@@ -358,6 +358,12 @@ li a:focus {
 
 /*=== MEDIA QUERIES ===*/
 
+@media screen and (min-width: 420px) and (orientation: landscape) {
+    .side-project-section {
+        min-height: 200vh;
+    }
+}
+
 @media screen and (max-width: 670px) and (orientation: landscape) {
     
     .homepage-image {
@@ -365,10 +371,14 @@ li a:focus {
     }
 }
 
-@media screen and (min-width: 671px)  {
+@media screen and (min-width: 667px)  {
 
     .homepage-titles {
         width: 70%;
+    }
+
+    .side-project-section {
+        min-height: 150vh;
     }
 }
 
